Fixing nsbeta2+ bug 41367, area.pathname incorrectly contained the ref and search parts of the URL. r=vidur